--- a/requirements.txt
+++ b/requirements.txt
@@ -10,6 +10,7 @@ django-cors-headers==4.0.0
 django-rest-framework==0.1.0
 djangorestframework==3.14.0
 drf-yasg==1.21.5
+gunicorn==20.1.0
 idna==3.4
 inflection==0.5.1
 itypes==1.2.0
