--- a/requirements.txt
+++ b/requirements.txt
@@ -9,6 +9,7 @@ Django==4.2.2
 django-cors-headers==4.0.0
 django-rest-framework==0.1.0
 djangorestframework==3.14.0
+djangorestframework-simplejwt==5.2.2
 drf-yasg==1.21.5
 gunicorn==20.1.0
 idna==3.4
@@ -19,6 +20,7 @@ MarkupSafe==2.1.3
 packaging==23.1
 Pillow==9.5.0
 psycopg2-binary==2.9.6
+PyJWT==2.7.0
 pytz==2023.3
 requests==2.31.0
 ruamel.yaml==0.17.31
